ReactApp/car_rental_react/src/css/style.css
/*+++++++++++++++++++*/

@-ms-viewport {
	width: device-width;
}
@viewport {
	width: device-width;
}

/*+++++++++++++++++++ MEDIA QUERY FOR SMALL +++++++++++++++++++ */
@media only screen and (min-width: 1px) and (max-width: 991px) {
    #progress-bar {
        flex-wrap: wrap;
        padding: 0px 100px 0px 100px;
    }

    #request-type {
        flex-wrap: wrap;
    }

    #progress-bar div {
        margin: 10px;
    }

    .innerbox {
        flex-wrap: wrap;
    }

    .box {
        height: 550px;
    }

    #filter-box {
        display: none;
    }

    #filter-button {
        display: flex;
        justify-content: center;
        padding: 0px 150px 0px 150px;
    }
    #filter-button .car-btn {
        background-color: #242424;
        color: #0FB877;
    }

    .sub-text {
        font-size: medium;
    }

    #reserve-button {
        width: 30vw;
    }


    #greeting {
        font-size: medium;
    }

    #update-button {
        width: 40vw;
        margin: 3%;
    }
    
    #status {
        width: 90vw;
        height: 5vh;
    }

    #car-types {
        width: 90vw;
        height: 5vh;
    }

    #details-box {
        height: 90vh;
        width: 95vw; 
    }
 
    #detail-box {
        width: 90vw;
    }

    

}

/*+++++++++++++++++++ MEDIA QUERY FOR LARGE +++++++++++++++++++ */
@media only screen and (min-width: 992px){
    #progress-bar {
        flex-wrap: nowrap;
    }

    #request-type {
        flex-wrap: nowrap;
        margin-left: 150px;
        margin-right: 150px;
    }

    .innerbox {
        flex-wrap: nowrap;
    }

    .box {
        height: 300px;
    }

    #car-selection {
        display: grid;
        gap: 10px;
        grid-template-columns: 1fr 3fr;
    }

    #filter-box {
        background-color: #242424;
        min-height: 800px;
        width: 90%;
        border-radius: 10px;
        margin: 40px;
        display: flex;
        flex-direction: column;
        padding: 20px 10px 20px 40px;
        color: white;
    }

    #filter-button .car-btn {
        display: none;
    }

    

}

/*+++++++++++++++++++ GLOBAL STYLES +++++++++++++++++++ */
.font-link {
    font-family: 'Poppins', sans-serif;
}

.root-style {
    background-color: #393939;
    position: absolute;
    width: 100%;
    height: '100vh';
    min-height: '100vh';
    color: black;
}

.jumbotron {
    background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5) ), url("../assets/car-banner.jpg");
    background-size: cover;
    background-position: center;
    height: 150px;
    width: 100vw;
    margin-bottom: 40px;
}

#progress-bar {
    display: flex;
    flex-direction: row;
}

.bottom-line {
    border-bottom: 10px solid black;
    flex: 1 1 auto;
    margin-left: 10px;
    margin-right: 10px;
}

#selected {
    color: #0FB877;
}

#selected.bottom-line {
    border-bottom: 10px solid #0FB877;
}

.box {
    background-color: #242424;
    border-radius: 10px;
    margin: 40px;
    display: flex;
    justify-content: center;
}

.innerbox {
    display: flex;
    flex-direction: row;
    margin: 5px 10px 5px 10px;
}

.field {
    border: 1px solid white;
    border-radius: 10px;
    margin: 15px 20px 15px 20px;
    flex: auto;
    padding: 20px 0px 0px 40px;
    height: 100px;
    color: #BFBFBF;
}

.field-no-border {
    margin: 0px 20px 0px 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    padding: 0px 90px 0px 90px;
    height: 100px;
    color: #BFBFBF;
    flex: 1 1 auto;
}

.field-no-border input {
    width: 38%;
    margin-bottom: 10px;
}

#request-type {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-bottom: 70px;
    border: 1px solid white;
    border-radius: 10px;
    height: 150px;
    color: #BFBFBF;
}

#request-type .car-btn {
    flex: 1 1 auto;
}

.auto-complete-items{
    position: absolute;
    z-index: 100;
    top: 65px;
    width: 30%;
    max-height: 200px;
    overflow-y: scroll;
  }

  .auto-complete-items .item {
    padding: 10px;
    cursor: pointer;
    background-color: #fff;
    border-bottom: 1px solid #d4d4d4;
    color:#0FB877;
  }
  
  .auto-complete-items .item:hover {
    background-color: #e9e9e9;
  }

#car-box {
    height: 250px;
    width: 100%;
    padding: 0px 20px 0px 20px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    color: white;
}

.car-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.car-info h3 {
    color:#0FB877;
}

.car-price {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.car-btn {
    background-color: #C8E745;
    color: black;
    margin: auto;
    height: 65px;
}

.modal {
    background-color: #393939;
    color: white;
}

.header-text {
    color: white;
}

.sub-text {
    color: #808080;
}

.rental-container {
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

}
.rental-details {
    background-color:  #242424;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    height: 40vh;
    width: 70vw;
}

.member-box {
    background-color:  #242424;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    height: 25vh;
    width: 70vw;
    margin: 20px;
}

.wide-car-btn {
    background-color: #C8E745;
    color: black;
    height: 5vh;
    width: 10vw;
    margin-top: 3px;
}

.rental-input {
    border-radius: 10px;
    border: 1px solid white;
    background-color:  #242424;
    color: #808080;
    height: 3vw;
    width: 30vw;
    margin: 3px;
    text-align: center;
}
.personal-details {
    background-color:  #242424;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    height: 55vh;
    width: 70vw; 
    margin-bottom: 20px;
    margin-top: 20px;
}

/*+++++++++++++++++++ ADMIN CAR LIST +++++++++++++++++++ */
.dropdown {
    border-color: white;
    width: 100%;
    border-style: solid;
    margin-bottom: 20px;
}

.table-box-info {
    display: flex;
    justify-content: center;
}

#table-box-info-value {
    color: white;
}

/*+++++++++++++++++++ ADMIN CAR DETIALS +++++++++++++++++++ */

.car-details {
    background-color:  #242424;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    height: 90vh;
    width: 70vw;
}

.car-info-box {
    color: white;
    background-color:  #242424;
    border-radius: 10px;
    border: 1px solid white;
    width: 30vw;
    height: 5vh;
}

.car-info-label {
    color: #04D484;
    margin: 1%;
}

.car-info-row {
    margin: 2%;
    color: white;
}

.car-detail-dropdown {
    width: 30vw;
    height: 3vh;
    margin: 2%;
    color: white;
    text-align: center;
    background-color: #242424;
    border-radius: 10px;
    border: 1px solid white;
}

